fix: moved nametags outside the scroller so they dont get cut off, re-positioned them to be where they were before, also added an event for the container scrolling so that the nametag is not still floating when its card has been scrolled away.

--- a/client/src/components/style/Skills.css
+++ b/client/src/components/style/Skills.css
@@ -1,4 +1,6 @@
 .skill-name {
-  translate: -50% -50%;
-  padding: 0.25rem 0.75rem;
+	translate: 0% -50%;
+	padding: 0.25rem 0.75rem;
+	min-width: 4rem;
+	text-align: center;
 }
